sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: reassignment to val
		if (plusPetit(i,i+1)) { i=i+1 }
                                         ^